cmake_minimum_required(VERSION 3.15)

# 设置工程名称
set(PROJECT_NAME server_test)
 
set(PROJECT_VERSION "0.01")
 
project(${PROJECT_NAME}
    LANGUAGES CXX
    VERSION ${PROJECT_VERSION}
)

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

if(NOT CMAKE_BUILD_TYPE)
set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_FLAGS_RELEASE -Ofast)
 
set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -O3  -Wall")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3  -Wall")

include_directories(${CMAKE_SOURCE_DIR})
add_subdirectory(src)
